feat: implement cron for updating Mobox tokens lvl