@@ -16,7 +16,6 @@ import org.web3j.protocol.core.methods.response.EthCall;
 import org.web3j.protocol.http.HttpService;
 
 import java.math.BigInteger;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.ExecutionException;
@@ -36,7 +35,7 @@ public class BlockChainService {
         Function function = new Function(
                 "totalSupply",
                 Collections.emptyList(),
-                Arrays.asList(new TypeReference<Uint>() {
+                List.of(new TypeReference<Uint>() {
                 }));
 
         List<Type> res = callBlockchainFunction(collectionAddress, function);
@@ -49,8 +48,8 @@ public class BlockChainService {
     public BigInteger getTokenId(String collectionAddress, Integer index) throws ExecutionException, InterruptedException {
         Function function = new Function(
                 "tokenByIndex",
-                Arrays.asList(new Uint(BigInteger.valueOf(index))),
-                Arrays.asList(new TypeReference<Uint>() {
+                List.of(new Uint(BigInteger.valueOf(index))),
+                List.of(new TypeReference<Uint>() {
                 }));
 
         List<Type> res = callBlockchainFunction(collectionAddress, function);
@@ -63,8 +62,8 @@ public class BlockChainService {
     public BigInteger getBunnyId(String collectionAddress, BigInteger index) throws ExecutionException, InterruptedException {
         Function function = new Function(
                 "getBunnyId",
-                Arrays.asList(new Uint(index)),
-                Arrays.asList(new TypeReference<Uint>() {
+                List.of(new Uint(index)),
+                List.of(new TypeReference<Uint>() {
                 }));
 
         List<Type> res = callBlockchainFunction(collectionAddress, function);
@@ -77,8 +76,8 @@ public class BlockChainService {
     public String getTokenURI(String collectionAddress, BigInteger index) throws ExecutionException, InterruptedException {
         Function function = new Function(
                 "tokenURI",
-                Arrays.asList(new Uint(index)),
-                Arrays.asList(new TypeReference<Utf8String>() {
+                List.of(new Uint(index)),
+                List.of(new TypeReference<Utf8String>() {
                 }));
 
         List<Type> res = callBlockchainFunction(collectionAddress, function);
@@ -86,6 +85,20 @@ public class BlockChainService {
             throw new RuntimeException("Decoded response is empty");
         }
         return (String) res.get(0).getValue();
+    }
+
+    public List<Type> getNftInfo(String collectionAddress, BigInteger tokenId) throws ExecutionException, InterruptedException {
+        Function function = new Function(
+                "getNftInfo",
+                List.of(new Uint(tokenId)),
+                List.of(new TypeReference<Utf8String>() {
+                }));
+
+        List<Type> response = callBlockchainFunction(collectionAddress, function);
+        if (response.isEmpty()) {
+            throw new RuntimeException("Decoded response is empty");
+        }
+        return response;
     }
 
     private List<Type> callBlockchainFunction(String collectionAddress, Function function) throws ExecutionException, InterruptedException {
